# cmake-vs2026

./: CMakeLists.txt  README.md
C++/: AfterBuild.cmake  CMakeCommon.md  CommonQL.cmake  get-cpp-fnames.ps1
libutility/: CMakeLists.txt
unitTest/: BadinputTest.h  CMakeLists.txt  qlLIBMain.cpp
zutility/: CMakeLists.txt
